# trntensor

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  neuron.yml  notify-umbrella.yml  publish.yml
benchmarks/: bench_einsum.py
docs/: api.md  architecture.md  aws_setup.md  benchmarks.md  contraction_patterns.md  developing_kernels.md  index.md  installation.md  quickstart.md  tutorial_df_mp2.md
docs/api/: decompose.md  einsum.md  index.md  nki.md  plan.md  quantum.md
docs/design/: matmul_dispatch_findings.md
examples/: df_mp2_einsum.py
infra/terraform/: README.md  main.tf
scripts/: autotune_dispatch.py  bench_to_md.py  run_benchmarks.sh  run_neuron_profile.sh  run_neuron_tests.sh  run_simulator_tests.sh
tests/: conftest.py  test_decompose.py  test_einsum.py  test_nki.py  test_nki_kernels.py  test_nki_sim.py  test_plan.py  test_quantum.py
trntensor/: __init__.py  decompose.py  einsum.py  plan.py  quantum.py
trntensor/nki/: __init__.py  _kernels.py  dispatch.py
