[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trntensor"
version = "0.1.2"
description = "Tensor contractions for AWS Trainium via NKI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Scott Friedman", email = "scttfrdmn@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
neuron = [
    # Pinned >=2.24 for NKI 2.24+ nc_matmul calling convention (unified
    # across the trnsci suite).
    "neuronxcc>=2.24",
    "torch-neuronx>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "scipy>=1.11",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/trnsci/trntensor"
Documentation = "https://trnsci.dev/trntensor/"
Repository = "https://github.com/trnsci/trntensor"
Issues = "https://github.com/trnsci/trntensor/issues"

[tool.setuptools.packages.find]
include = ["trntensor*"]

[tool.pytest.ini_options]
markers = ["neuron: requires Neuron hardware"]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
