[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trntensor"
version = "0.1.2"
description = "Tensor contractions for AWS Trainium via NKI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Scott Friedman", email = "scttfrdmn@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
neuron = [
    # Pinned >=2.24 for NKI 2.24+ nc_matmul calling convention (unified
    # across the trnsci suite).
    "neuronxcc>=2.24",
    "torch-neuronx>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "scipy>=1.11",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/trnsci/trntensor"
Documentation = "https://trnsci.dev/trntensor/"
Repository = "https://github.com/trnsci/trntensor"
Issues = "https://github.com/trnsci/trntensor/issues"

[tool.setuptools.packages.find]
include = ["trntensor*"]

[tool.ruff]
# Match the rest of the trnsci suite. Line length 100 is a compromise
# between black's 88 and the wider tables common in scientific code.
line-length = 100
target-version = "py310"
extend-exclude = ["site", "infra/terraform*/.terraform"]

[tool.ruff.lint]
# Sensible default selection: pycodestyle (E/W), Pyflakes (F), isort (I),
# pyupgrade (UP), flake8-bugbear (B), flake8-simplify (SIM). Skip docstring
# rules (D*) — we're deliberately light on docstrings in this project.
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — formatter handles it
    "B008",   # function call in default arg — common + intentional here
]

[tool.ruff.lint.per-file-ignores]
# NKI kernels use patterns that trip some lint rules (SBUF writes that
# look unused to the linter, etc). Don't fight the kernel authoring loop.
"trntensor/nki/_kernels.py" = ["F841", "B007"]
"trntensor/nki/dispatch.py" = ["F841", "B007"]
"scripts/*" = ["F401"]
"tests/*"   = ["F401", "F811"]

[tool.ruff.format]
# Black-compatible defaults.
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = ["neuron: requires Neuron hardware"]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
